# wechat-video-ai-danmaku

./: .gitignore  README.md  Start WeChat Video AI.command  config.example.json  pyproject.toml  start.sh  stop.sh
app/: main.py
app/macos/: click_helper.py  input_control.py  osascript.py
asr/: transcribe.py
docs/: PRD.md  TECH_DESIGN.md
scripts/: asr_mic.sh  audio_devices.sh  build_clicker.sh  build_ocr.sh  send_once.sh  setup_mac.sh  start.sh  stop.sh  wx_focus_and_paste.applescript  wxclick
src/ai_danmaku/: cli.py  config.py  pipeline.py
src/ai_danmaku.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/ai_danmaku/automation/: safari.py
src/ai_danmaku/generation/: llm.py
src/ai_danmaku/storage/: db.py
src/ai_danmaku/tts/: macos.py
tools/: wxclick.swift  wxocr.swift
